--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
     "@angular/compiler": "2.1.2",
     "@angular/core": "2.1.2",
     "@angular/forms": "2.1.2",
+    "@angular/http": "^2.2.0",
     "@angular/platform-browser": "2.1.2",
     "@angular/platform-browser-dynamic": "2.1.2",
+    "@angular/platform-server": "^2.2.0",
     "@angular/router": "3.1.2",
     "angular2-meteor": "0.7.1",
     "angular2-meteor-polyfills": "0.1.1",
     "angular2-meteor-tests-polyfills": "0.0.2",
+    "angular2-moment": "^1.0.0-beta.3",
     "babel-runtime": "^6.18.0",
+    "ionic-angular": "^2.0.0-rc.0",
+    "ionic-native": "^2.2.6",
+    "ionicons": "^3.0.0",
     "meteor-rxjs": "0.4.4",
     "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.12",
