--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular2-meteor-base",
   "private": true,
   "scripts": {
-    "start": "meteor run",
+    "start": "meteor run --settings private/settings.json",
     "start:prod": "meteor run --production",
     "build": "meteor build ./build/",
     "clear": "meteor reset",
